@@ -1,110 +1,0 @@
-[versions]
-# ZTK
-zope.annotation = 3.5.0
-zope.applicationcontrol = 3.5.5
-zope.authentication = 3.7.1
-zope.broken = 3.6.0
-zope.browser = 1.3
-zope.browsermenu = 3.9.1
-zope.browserpage = 3.12.2
-zope.browserresource = 3.12.0
-zope.cachedescriptors = 3.5.1
-zope.catalog = 3.8.2
-zope.component = 3.10.0
-zope.componentvocabulary = 1.0.1
-zope.configuration = 3.7.4
-zope.container = 3.12.0
-zope.contentprovider = 3.7.2
-zope.contenttype = 3.5.5
-zope.copy = 3.5.0
-zope.copypastemove = 3.8.0
-zope.datetime = 3.4.1
-zope.deferredimport = 3.5.3
-zope.deprecation = 3.4.1
-zope.dottedname = 3.4.6
-zope.dublincore = 3.8.2
-zope.error = 3.7.4
-zope.event = 3.5.1
-zope.exceptions = 3.6.1
-zope.filerepresentation = 3.6.1
-zope.formlib = 4.0.6
-zope.hookable = 3.4.1
-zope.i18n = 3.7.4
-zope.i18nmessageid = 3.5.3
-zope.index = 3.6.3
-zope.interface = 3.7.0
-zope.intid = 3.7.2
-zope.keyreference = 3.6.4
-zope.lifecycleevent = 3.6.2
-zope.location = 3.9.1
-zope.login = 1.0.0
-zope.mimetype = 1.3.1
-zope.minmax = 1.1.2
-zope.pagetemplate = 3.5.2
-zope.password = 3.6.1
-zope.pluggableauth = 1.2
-zope.principalannotation = 3.6.1
-zope.principalregistry = 3.7.1
-zope.processlifetime = 1.0
-zope.proxy = 3.6.1
-zope.ptresource = 3.9.0
-zope.publisher = 3.12.6
-zope.ramcache = 1.0
-zope.schema = 3.7.1
-zope.security = 3.8.3
-zope.securitypolicy = 3.7.0
-zope.sendmail = 3.7.4
-zope.sequencesort = 3.4.0
-zope.server = 3.8.6
-zope.session = 3.9.5
-zope.site = 3.9.2
-zope.size = 3.4.1
-zope.structuredtext = 3.5.1
-zope.tal = 3.5.2
-zope.tales = 3.5.1
-zope.testing = 3.10.3
-zope.testrunner = 4.0.4
-zope.traversing = 3.14.0
-zope.viewlet = 3.7.2
-
-# Deprecating
-
-# Dependencies
-distribute = 0.6.24
-docutils = 0.7
-Jinja2 = 2.5.5
-mechanize = 0.2.5
-Paste = 1.7.5.1
-PasteDeploy = 1.3.4
-PasteScript = 1.7.5
-py = 1.4.7
-Pygments = 1.4
-python-gettext = 1.0
-python-subunit = 0.0.7
-pytz = 2011n
-RestrictedPython = 3.6.0
-setuptools = 0.6c11
-Sphinx = 1.0.8
-testtools = 0.9.12
-transaction = 1.1.1
-z3c.recipe.sphinxdoc = 0.0.8
-zc.buildout = 1.5.2
-zc.lockfile = 1.0.0
-ZConfig = 2.8.0
-zc.recipe.egg = 1.3.2
-zc.recipe.testrunner = 1.4.0
-zc.resourcelibrary = 1.3.4
-zdaemon = 2.0.4
-ZODB3 = 3.10.5
-zope.mkzeoinstance = 3.9.5
-
-# toolchain
-argparse = 1.1
-lxml = 2.2.8
-mr.developer = 1.18
-tl.eggdeps = 0.4
-z3c.checkversions = 0.4.1
-z3c.recipe.compattest = 0.13.1
-z3c.recipe.depgraph = 0.5
-z3c.recipe.scripts = 1.0.1
-zope.kgs = 1.2.0
